--- a/localisation/english/MD_focus_BUL_l_english.yml
+++ b/localisation/english/MD_focus_BUL_l_english.yml
@@ -467,7 +467,7 @@
  bul_mech.11.t: "Bulgarian Offer"
  bul_mech.11.d: "Bulgaria offers us investments from their business sector into our economy. It may increase their influence on us, but it will really help us in overcoming economic stagnation."
  bul_mech.11.a: "Sure!"
- bul_mech.11.b: "Thanks, no"
+ bul_mech.11.b: "No, thanks"
 
  bul_mech.12.t: "Macedonia Wants investments"
  bul_mech.12.d: "Macedonia accpeted our offer."
