--- a/localisation/english/MD_focus_BUL_l_english.yml
+++ b/localisation/english/MD_focus_BUL_l_english.yml
@@ -301,15 +301,15 @@
  bulg.1.t: "Bulgaria asks for investments"
  bulg.1.d: "Bulgaria asks us for investing our money into bulgarian economy."
  bulg.1.a: "Sure!"
- bulg.1.b: "No."
+ bulg.1.b: "No"
 
  bulg.2.t: "They Refuse to invest"
  bulg.2.d: "They Refused to invest in us."
- bulg.2.a: "Sad."
+ bulg.2.a: "Sad"
 
  bulg.3.t: "They will invest in us"
  bulg.3.d: "Our economic partners will invest in our economy."
- bulg.3.a: "Thanks!"
+ bulg.3.a: "Thanks"
  bul_ACDI_Decline_tt: "We will decline their offer"
 
  BUL_make_greeks_submit: "Make Greeks Submit"
@@ -342,7 +342,7 @@
  bul_ACDI.1.t: "Bulgaria offers Alliance"
  bul_ACDI.1.d: "Bulgaria offer us to be in alliance with them to crush our mutual enemies."
  bul_ACDI.1.a: "We will fight together."
- bul_ACDI.1.b: "Sorry, no."
+ bul_ACDI.1.b: "Sorry, no"
  bul_ACDI.1.c: "We can offer Alternative help."
  bul_ACDI.2.t: "They accepted our offer."
  bul_ACDI.2.d: "They will join our pact."
@@ -352,7 +352,7 @@
  bul_ACDI.3.a: "Ugh"
  bul_ACDI.4.t: "They agreed to provide us support."
  bul_ACDI.4.d: "They will provide us support, but will not join our faction."
- bul_ACDI.4.a: "Thanks!"
+ bul_ACDI.4.a: "Thanks"
 
  bulg.11.t: "Our Stance on Russia"
  bulg.11.d: "Russia has very strange stance on world's geopolitical arena. What stance we should take on having relation with them?"
@@ -431,7 +431,7 @@
 
  bulg.7.t: "Bulgarian Politics"
  bulg.7.d: "In the year 2000, Bulgaria was undergoing significant changes in its political landscape. The country was still recovering from the economic and political turmoil of the 1990s, and there was a growing sense of frustration among the people towards the government. The ruling party, the Bulgarian Socialist Party (BSP), had been in power since 1995 and was facing increasing criticism for its handling of the economy and corruption allegations. In this context, the presidential elections of 2000 were a crucial moment for the country. The incumbent president, Petar Stoyanov, ran for re-election as an independent candidate, promising to continue his pro-European and pro-market reforms. He faced a tough challenge from the BSP's candidate, Georgi Parvanov, who promised a return to socialist policies and closer ties with Russia. In the end, Stoyanov won a narrow victory, securing a second term in office. However, Parvanov's strong showing signaled a shift in the political climate"
- bulg.7.a: "Interesting."
+ bulg.7.a: "Interesting"
 
  bulg.8.t: "Whom we will support?"
  bulg.8.d: "The Bulgarian left and right radicals came out against the pro-Western course of the Bulgarian political elite. Who should take priority in the protests?"
@@ -462,12 +462,12 @@
 
  bul_mech.10.t: "Bulgarian-Macedonian diplomatic meeting!"
  bul_mech.10.d: "In recent years, relations between Bulgaria and North Macedonia have undergone a significant improvement. This was further demonstrated by a recent friendly diplomatic meeting between the two countries. The meeting took place in Sofia, Bulgaria, and it was attended by high-ranking officials from both countries. During the meeting, the officials discussed a range of issues including trade, security, and cultural cooperation."
- bul_mech.10.a: "Interesting."
+ bul_mech.10.a: "Interesting"
 
  bul_mech.11.t: "Bulgarian Offer"
  bul_mech.11.d: "Bulgaria offers us investments from their business sector into our economy. It may increase their influence on us, but it will really help us in overcoming economic stagnation."
  bul_mech.11.a: "Sure!"
- bul_mech.11.b: "Thanks, no."
+ bul_mech.11.b: "No, thanks"
 
  bul_mech.12.t: "Macedonia Wants investments"
  bul_mech.12.d: "Macedonia accpeted our offer."
@@ -480,7 +480,7 @@
 
  bul_mech.14.t: "Anti-Radicals raid"
  bul_mech.14.d: "Bulgarian and Macedonian forces came together to launch a joint operation to raid radical Macedonian separatists. The operation was a success, with a number of individuals linked to the extremist organization being detained. This move signals an effort from both countries to tackle extremist activity and maintain stability in the region. The extremist organization in question has been advocating for the creation of a Greater Macedonia, which includes parts of Bulgaria and Greece. This has led to tensions between the countries and has fueled violent incidents in the past. By working together, Bulgaria and Macedonia are sending a message that such radicalism is not welcome and will not be tolerated."
- bul_mech.14.a: "Interesting."
+ bul_mech.14.a: "Interesting"
 
  bul_mech.16.t: "Our Agenda..."
  bul_mech.16.d: "We want to conduct a diplomatic meeting quite soon. What will be on our agenda?"
@@ -500,12 +500,12 @@
 
  bul_mech.18.t: "Our Neighbors invite us for military trainings on the border."
  bul_mech.18.a: "We agree!"
- bul_mech.18.b: "Sorry, no."
+ bul_mech.18.b: "Sorry, no"
 
  bul_mech.19.t: "Bulgaria offers friendship agreement!"
  bul_mech.19.d: "Bulgaria offers friendship agreement between Macedonia and Bulgaria."
- bul_mech.19.a: "Of course!"
- bul_mech.19.b: "Sorry, no."
+ bul_mech.19.a: "Of Course"
+ bul_mech.19.b: "Sorry, no"
 
  bul_mech.20.t: "Anti-Bulgarian Propaganda Campaign in Macedonia"
  bul_mech.20.d: "Bulgaria launched a propaganda campaign in Macedonia to persuade the country to join forces with their southern neighbor. The campaign included billboards and advertisements that called on Macedonians to "unite with the Bulgarian brothers" and claimed that the two nations shared a common history and culture. However, many Macedonians saw the campaign as an attempt at cultural assimilation and rejected the notion of joining Bulgaria. Nationalists in Macedonia accused Bulgaria of attempting to erase their identity and language and vowed to resist the propaganda campaign.."
@@ -706,7 +706,7 @@
 
  bulg.13.t: "Bulgarian Industry"
  bulg.13.d: "After the 90s, Bulgaria was still recovering from the economic and political turmoil that followed the collapse of communism in 1989. The country had experienced a period of hyperinflation in the early 1990s, followed by a period of stabilization and gradual economic growth. However, in 1996, Bulgaria suffered a severe economic crisis which was partly the result of a banking system collapse and a sharp depreciation of the national currency. By the year 2000, Bulgaria's economy was slowly recovering from the crisis, but still faced a number of challenges. The country's GDP was growing at a moderate rate, but unemployment remained high and poverty levels were significant. The government was implementing a range of economic reforms aimed at reducing the budget deficit, improving public finances, and promoting foreign investment."
- bulg.13.a: "Interesting."
+ bulg.13.a: "Interesting"
 
  bulg.14.t: "Turkish Protests"
  bulg.14.d: "A group of Turkish minority activists held a protest in front of the Bulgarian parliament, calling for greater rights and an end to discrimination. The protest turned violent when police attempted to disperse the crowd, leading to clashes and injuries on both sides. The Turkish minority in Bulgaria has also criticized the government's policies towards their community, including the forced closure of Turkish-language schools and restrictions on the use of Turkish names. They have called for greater autonomy and recognition within the Bulgarian state, including the right to use their language in official contexts."
