Rework Russian Subjects and Separatism

--- a/localisation/english/MD_focus_SOV_l_english.yml
+++ b/localisation/english/MD_focus_SOV_l_english.yml
@@ -2878,8 +2878,6 @@
  SOV_udaltsov: "Stalingrad Soviet Republic"
  SOV_yashi: "Northern Republic"
  SOV_shoigu: "Tuvan Military District"
- #Russian Autonomies
- autonomy_republic_rf: "Republic of Federal Significance"
  ###MLA Content
  #MLA Decision
  SOV_moa_category: "Malorossiya Liberation Army"
@@ -5039,17 +5037,92 @@
  SOV_rosguard_wagner: "Accept The Wagner PMCs Into The Rosgvardiya"
  SOV_rosguard_wagner_desc: "After the death of Yevgeny Prigozhin, his PMCs began to fall apart before our eyes, some remained in Belarus, many quit, but some are ready to come under our direct control. We are ready to make them a part of Rosgvardiya"
 
+ ###########MDV DECISIONS###########
  SOV_mvd_category: "[SOV.GetFlag]Ministry of Internal Affairs"
- SOV_mvd_category_desc: "\n\n\n\n\n\n£SOV_desctext_mvd\n\n\n\n\n\n\n\n\n§YThe Ministry of Internal Affairs of the [SOV.GetFlag]Russian Federation§!  is a federal executive authority responsible for the development and implementation of state policy and regulatory regulation in the field of internal affairs, in the field of control over the turnover of narcotic drugs, psychotropic substances and their precursors, in the field of migration, as well as law enforcement functions for federal state control (supervision) in the field of internal affairs\n\n[SOV_TAT_separat]\n\n[SOV_BSH_separat]\n\n[SOV_CHE_separat]"
+ SOV_mvd_category_desc: "§YThe Ministry of Internal Affairs of the [SOV.GetFlag]Russian Federation§!  is a federal executive authority responsible for the development and implementation of state policy and regulatory regulation in the field of internal affairs, control over the turnover of narcotic drugs, psychotropic substances and their precursors, immigration, as well as law enforcement functions for federal state control (supervision) in the field of internal affairs\nSeparatism in the [SOV.GetFlag]§YRussian§! regions will begin to §Rincrease§! gradually as soon as the level of §Ystability§! falls §Rbelow 32%§!\n"
+ ###########Separatism Povoljie###########
+ SOV_separ_povoljie_open: "§RSeparatism§! in the §YVolga Region§!: §GOpen§!"
+ SOV_separ_povoljie_close: "§RSeparatism§! in the §YVolga Region§!: §RClose§!"
  SOV_anti_tatar_separ: "§RSuppress§! §Y[TAT.GetNameWithFlag] Separatism§! Through The Media"
  SOV_anti_tatar_separ_rosguard: "§RSuppress§! §Y[TAT.GetNameWithFlag] Separatism§! With The Help of Rosgvardiya"
  SOV_anti_tatar_separ_fsb: "§RSuppress§! §Y[TAT.GetNameWithFlag] Separatism§! With The Help of FSB"
  SOV_anti_bashkir_separ: "§RSuppress§! §Y[BSH.GetNameWithFlag] Separatism§! Through The Media"
  SOV_anti_bashkir_separ_rosguard: "§RSuppress§! §Y[BSH.GetNameWithFlag] Separatism§! With The Help of Rosgvardiya"
  SOV_anti_bashkir_separ_fsb: "§RSuppress§! §Y[BSH.GetNameWithFlag] Separatism§! With The Help of FSB"
+ SOV_anti_mariel_separ: "§RSuppress§! §Y[MEL.GetNameWithFlag] Separatism§! Through The Media"
+ SOV_anti_mariel_separ_rosguard: "§RSuppress§! §Y[MEL.GetNameWithFlag] Separatism§! With The Help of Rosgvardiya"
+ SOV_anti_mariel_separ_fsb: "§RSuppress§! §Y[MEL.GetNameWithFlag] Separatism§! With The Help of FSB"
+ SOV_anti_mordov_separ: "§RSuppress§! §Y[MOV.GetNameWithFlag] Separatism§! Through The Media"
+ SOV_anti_mordov_separ_rosguard: "§RSuppress§! §Y[MOV.GetNameWithFlag] Separatism§! With The Help of Rosgvardiya"
+ SOV_anti_mordov_separ_fsb: "§RSuppress§! §Y[MOV.GetNameWithFlag] Separatism§! With The Help of FSB"
+ SOV_anti_udmurt_separ: "§RSuppress§! §Y[UDM.GetNameWithFlag] Separatism§! Through The Media"
+ SOV_anti_udmurt_separ_rosguard: "§RSuppress§! §Y[UDM.GetNameWithFlag] Separatism§! With The Help of Rosgvardiya"
+ SOV_anti_udmurt_separ_fsb: "§RSuppress§! §Y[UDM.GetNameWithFlag] Separatism§! With The Help of FSB"
+ SOV_anti_chuvash_separ: "§RSuppress§! §Y[CHU.GetNameWithFlag] Separatism§! Through The Media"
+ SOV_anti_chuvash_separ_rosguard: "§RSuppress§! §Y[CHU.GetNameWithFlag] Separatism§! With The Help of Rosgvardiya"
+ SOV_anti_chuvash_separ_fsb: "§RSuppress§! §Y[CHU.GetNameWithFlag] Separatism§! With The Help of FSB"
+ ###########Caucas###########
+ SOV_separ_caucas_open: "§RSeparatism§! in the §YCaucasus§!: §GOpen§!"
+ SOV_separ_caucas_close: "§RSeparatism§! in the §YCaucasus§!: §RClose§!"
  SOV_anti_chechen_separ: "§RSuppress§! §Y[CHE.GetNameWithFlag] Separatism§! Through The Media"
  SOV_anti_chechen_separ_rosguard: "§RSuppress§! §Y[CHE.GetNameWithFlag] Separatism§! With The Help of Rosgvardiya"
  SOV_anti_chechen_separ_fsb: "§RSuppress§! §Y[CHE.GetNameWithFlag] Separatism§! With The Help of FSB"
+ SOV_anti_ingush_separ: "§RSuppress§! §Y[ING.GetNameWithFlag] Separatism§! Through The Media"
+ SOV_anti_ingush_separ_rosguard: "§RSuppress§! §Y[ING.GetNameWithFlag] Separatism§! With The Help of Rosgvardiya"
+ SOV_anti_ingush_separ_fsb: "§RSuppress§! §Y[ING.GetNameWithFlag] Separatism§! With The Help of FSB"
+ SOV_anti_kabardin_separ: "§RSuppress§! §Y[KBK.GetNameWithFlag] Separatism§! Through The Media"
+ SOV_anti_kabardin_separ_rosguard: "§RSuppress§! §Y[KBK.GetNameWithFlag] Separatism§! With The Help of Rosgvardiya"
+ SOV_anti_kabardin_separ_fsb: "§RSuppress§! §Y[KBK.GetNameWithFlag] Separatism§! With The Help of FSB"
+ SOV_anti_karachaev_separ: "§RSuppress§! §Y[KCC.GetNameWithFlag] Separatism§! Through The Media"
+ SOV_anti_karachaev_separ_rosguard: "§RSuppress§! §Y[KCC.GetNameWithFlag] Separatism§! With The Help of Rosgvardiya"
+ SOV_anti_karachaev_separ_fsb: "§RSuppress§! §Y[KCC.GetNameWithFlag] Separatism§! With The Help of FSB"
+ SOV_anti_adygea_separ: "§RSuppress§! §Y[ADY.GetNameWithFlag] Separatism§! Through The Media"
+ SOV_anti_adygea_separ_rosguard: "§RSuppress§! §Y[ADY.GetNameWithFlag] Separatism§! With The Help of Rosgvardiya"
+ SOV_anti_adygea_separ_fsb: "§RSuppress§! §Y[ADY.GetNameWithFlag] Separatism§! With The Help of FSB"
+ SOV_anti_dagestan_separ: "§RSuppress§! §Y[DAG.GetNameWithFlag] Separatism§! Through The Media"
+ SOV_anti_dagestan_separ_rosguard: "§RSuppress§! §Y[DAG.GetNameWithFlag] Separatism§! With The Help of Rosgvardiya"
+ SOV_anti_dagestan_separ_fsb: "§RSuppress§! §Y[DAG.GetNameWithFlag] Separatism§! With The Help of FSB"
+ ###########Siberia###########
+ SOV_separ_siberia_open: "§RSeparatism§! in the §YSiberia§!: §GOpen§!"
+ SOV_separ_siberia_close: "§RSeparatism§! in the §YSiberia§!: §RClose§!"
+ SOV_anti_komi_separ: "§RSuppress§! §Y[KOM.GetNameWithFlag] Separatism§! Through The Media"
+ SOV_anti_komi_separ_rosguard: "§RSuppress§! §Y[KOM.GetNameWithFlag] Separatism§! With The Help of Rosgvardiya"
+ SOV_anti_komi_separ_fsb: "§RSuppress§! §Y[KOM.GetNameWithFlag] Separatism§! With The Help of FSB"
+ SOV_anti_nenets_separ: "§RSuppress§! §Y[NEE.GetNameWithFlag] Separatism§! Through The Media"
+ SOV_anti_nenets_separ_rosguard: "§RSuppress§! §Y[NEE.GetNameWithFlag] Separatism§! With The Help of Rosgvardiya"
+ SOV_anti_nenets_separ_fsb: "§RSuppress§! §Y[NEE.GetNameWithFlag] Separatism§! With The Help of FSB"
+ SOV_anti_tuva_separ: "§RSuppress§! §Y[TUV.GetNameWithFlag] Separatism§! Through The Media"
+ SOV_anti_tuva_separ_rosguard: "§RSuppress§! §Y[TUV.GetNameWithFlag] Separatism§! With The Help of Rosgvardiya"
+ SOV_anti_tuva_separ_fsb: "§RSuppress§! §Y[TUV.GetNameWithFlag] Separatism§! With The Help of FSB"
+ SOV_anti_khakas_separ: "§RSuppress§! §Y[KHS.GetNameWithFlag] Separatism§! Through The Media"
+ SOV_anti_khakas_separ_rosguard: "§RSuppress§! §Y[KHS.GetNameWithFlag] Separatism§! With The Help of Rosgvardiya"
+ SOV_anti_khakas_separ_fsb: "§RSuppress§! §Y[KHS.GetNameWithFlag] Separatism§! With The Help of FSB"
+ SOV_anti_buryat_separ: "§RSuppress§! §Y[BRY.GetNameWithFlag] Separatism§! Through The Media"
+ SOV_anti_buryat_separ_rosguard: "§RSuppress§! §Y[BRY.GetNameWithFlag] Separatism§! With The Help of Rosgvardiya"
+ SOV_anti_buryat_separ_fsb: "§RSuppress§! §Y[BRY.GetNameWithFlag] Separatism§! With The Help of FSB"
+ SOV_anti_yakut_separ: "§RSuppress§! §Y[YAK.GetNameWithFlag] Separatism§! Through The Media"
+ SOV_anti_yakut_separ_rosguard: "§RSuppress§! §Y[YAK.GetNameWithFlag] Separatism§! With The Help of Rosgvardiya"
+ SOV_anti_yakut_separ_fsb: "§RSuppress§! §Y[YAK.GetNameWithFlag] Separatism§! With The Help of FSB"
+ SOV_anti_altai_separ: "§RSuppress§! §Y[ALT.GetNameWithFlag] Separatism§! Through The Media"
+ SOV_anti_altai_separ_rosguard: "§RSuppress§! §Y[ALT.GetNameWithFlag] Separatism§! With The Help of Rosgvardiya"
+ SOV_anti_altai_separ_fsb: "§RSuppress§! §Y[ALT.GetNameWithFlag] Separatism§! With The Help of FSB"
+ SOV_anti_yugra_separ: "§RSuppress§! §Y[KHM.GetNameWithFlag] Separatism§! Through The Media"
+ SOV_anti_yugra_separ_rosguard: "§RSuppress§! §Y[KHM.GetNameWithFlag] Separatism§! With The Help of Rosgvardiya"
+ SOV_anti_yugra_separ_fsb: "§RSuppress§! §Y[KHM.GetNameWithFlag] Separatism§! With The Help of FSB"
+ SOV_anti_yamal_separ: "§RSuppress§! §Y[YAM.GetNameWithFlag] Separatism§! Through The Media"
+ SOV_anti_yamal_separ_rosguard: "§RSuppress§! §Y[YAM.GetNameWithFlag] Separatism§! With The Help of Rosgvardiya"
+ SOV_anti_yamal_separ_fsb: "§RSuppress§! §Y[YAM.GetNameWithFlag] Separatism§! With The Help of FSB"
+ ###########Other###########
+ SOV_separ_other_open: "§RSeparatism§! in the §YOther Regions§!: §GOpen§!"
+ SOV_separ_other_close: "§RSeparatism§! in the §YOther Regions§!: §RClose§!"
+ SOV_anti_karel_separ: "§RSuppress§! §Y[KAE.GetNameWithFlag] Separatism§! Through The Media"
+ SOV_anti_karel_separ_rosguard: "§RSuppress§! §Y[KAE.GetNameWithFlag] Separatism§! With The Help of Rosgvardiya"
+ SOV_anti_karel_separ_fsb: "§RSuppress§! §Y[KAE.GetNameWithFlag] Separatism§! With The Help of FSB"
+ SOV_anti_kalmyk_separ: "§RSuppress§! §Y[KLM.GetNameWithFlag] Separatism§! Through The Media"
+ SOV_anti_kalmyk_separ_rosguard: "§RSuppress§! §Y[KLM.GetNameWithFlag] Separatism§! With The Help of Rosgvardiya"
+ SOV_anti_kalmyk_separ_fsb: "§RSuppress§! §Y[KLM.GetNameWithFlag] Separatism§! With The Help of FSB"
+
+ ###########Other Activities###########
  SOV_anti_wagner: "§RDeal With§! The Influence of Prigozhin"
  SOV_grom_to_rosgvardia: "§YTransfer§! the Special purpose Unit §Y"Grom"§! to §RRosgvardiya§!"
  SOV_mobilise_omon: "§YMobilize§! the §ROMON§!"
@@ -5058,9 +5131,42 @@
  SOV_anti_sheriff: "Liberate §YTransnistria§! from the influence of §Rthe Sheriff§!"
 
 
- SOV_TAT_separ_tt: "§RSeparatism§! in §Y[TAT.GetNameWithFlag]§! is equal to: §Y[?TAT.subjectinped]§!"
- SOV_BSH_separ_tt: "§RSeparatism§! in §Y[BSH.GetNameWithFlag]§! is equal to: §Y[?BSH.subjectinped]§!"
- SOV_CHE_separ_tt: "§RSeparatism§! in §Y[CHE.GetNameWithFlag]§! is equal to: §Y[?CHE.subjectinped]§!"
+ SOV_TAT_separ_tt: "§RSeparatism§! in §Y[TAT.GetNameWithFlag]§!: §Y[?TAT.subjectinped]§!%"
+ SOV_BSH_separ_tt: "§RSeparatism§! in §Y[BSH.GetNameWithFlag]§!: §Y[?BSH.subjectinped]§!%"
+ SOV_CHE_separ_tt: "§RSeparatism§! in §Y[CHE.GetNameWithFlag]§!: §Y[?CHE.subjectinped]§!%"
+ SOV_KBK_separ_tt: "§RSeparatism§! in §Y[KBK.GetNameWithFlag]§!: §Y[?KBK.subjectinped]§!%"
+ SOV_TUV_separ_tt: "§RSeparatism§! in §Y[TUV.GetNameWithFlag]§!: §Y[?TUV.subjectinped]§!%"
+ SOV_YAK_separ_tt: "§RSeparatism§! in §Y[YAK.GetNameWithFlag]§!: §Y[?YAK.subjectinped]§!%"
+ SOV_BRY_separ_tt: "§RSeparatism§! in §Y[BRY.GetNameWithFlag]§!: §Y[?BRY.subjectinped]§!%"
+ SOV_KOM_separ_tt: "§RSeparatism§! in §Y[KOM.GetNameWithFlag]§!: §Y[?KOM.subjectinped]§!%"
+ SOV_KHS_separ_tt: "§RSeparatism§! in §Y[KHS.GetNameWithFlag]§!: §Y[?KHS.subjectinped]§!%"
+ SOV_KAE_separ_tt: "§RSeparatism§! in §Y[KAE.GetNameWithFlag]§!: §Y[?KAE.subjectinped]§!%"
+ SOV_NEE_separ_tt: "§RSeparatism§! in §Y[NEE.GetNameWithFlag]§!: §Y[?NEE.subjectinped]§!%"
+ SOV_KCC_separ_tt: "§RSeparatism§! in §Y[KCC.GetNameWithFlag]§!: §Y[?KCC.subjectinped]§!%"
+ SOV_ING_separ_tt: "§RSeparatism§! in §Y[ING.GetNameWithFlag]§!: §Y[?ING.subjectinped]§!%"
+ SOV_ADY_separ_tt: "§RSeparatism§! in §Y[ADY.GetNameWithFlag]§!: §Y[?ADY.subjectinped]§!%"
+ SOV_KLM_separ_tt: "§RSeparatism§! in §Y[KLM.GetNameWithFlag]§!: §Y[?KLM.subjectinped]§!%"
+ SOV_DAG_separ_tt: "§RSeparatism§! in §Y[DAG.GetNameWithFlag]§!: §Y[?DAG.subjectinped]§!%"
+ SOV_CHU_separ_tt: "§RSeparatism§! in §Y[CHU.GetNameWithFlag]§!: §Y[?CHU.subjectinped]§!%"
+ SOV_MEL_separ_tt: "§RSeparatism§! in §Y[MEL.GetNameWithFlag]§!: §Y[?MEL.subjectinped]§!%"
+ SOV_MOV_separ_tt: "§RSeparatism§! in §Y[MOV.GetNameWithFlag]§!: §Y[?MOV.subjectinped]§!%"
+ SOV_UDM_separ_tt: "§RSeparatism§! in §Y[UDM.GetNameWithFlag]§!: §Y[?UDM.subjectinped]§!%"
+ SOV_ALT_separ_tt: "§RSeparatism§! in §Y[ALT.GetNameWithFlag]§!: §Y[?ALT.subjectinped]§!%"
+ SOV_KHM_separ_tt: "§RSeparatism§! in §Y[KHM.GetNameWithFlag]§!: §Y[?KHM.subjectinped]§!%"
+ SOV_YAM_separ_tt: "§RSeparatism§! in §Y[YAM.GetNameWithFlag]§!: §Y[?YAM.subjectinped]§!%"
+
+ SUB_separ_tt: "§YSubject§! will §Rrefuse§! to obey the federal government"
+ SUB_campaign_prepare_tt: "Make sure your §Ysubjects§! have brigades of soldiers"
+
+ SUB_separ_caucas_tt: "[SOV_CHE_separat]\n[SOV_KBK_separat]\n[SOV_ING_separat]\n[SOV_ADY_separat]\n[SOV_DAG_separat]\n[SOV_KCC_separat]\n"
+ SUB_separ_caucas_output: "§YCaucasus§!"
+ SUB_separ_povoljie_tt: "[SOV_TAT_separat]\n[SOV_BSH_separat]\n[SOV_CHU_separat]\n[SOV_MEL_separat]\n[SOV_MOV_separat]\n[SOV_UDM_separat]\n"
+ SUB_separ_povoljie_output: "§YVolga area§!"
+ SUB_separ_siberia_tt: "[SOV_TUV_separat]\n[SOV_YAK_separat]\n[SOV_BRY_separat]\n[SOV_KOM_separat]\n[SOV_KHS_separat]\n[SOV_NEE_separat]\n[SOV_ALT_separat]\n[SOV_YAM_separat]\n[SOV_KHM_separat]\n"
+ SUB_separ_siberia_output: "§YSiberia§!"
+ SUB_separ_other_tt: "[SOV_KAE_separat]\n[SOV_KLM_separat]\n"
+ SUB_separ_other_output: "§YOther regions§!"
+
 
 
  sov_reunification_category: "Unification Of Russia"
