--- a/localisation/english/MD_game_rules_l_english.yml
+++ b/localisation/english/MD_game_rules_l_english.yml
@@ -718,6 +718,7 @@
  RULE_ALLOW_RELEASE_NATIONS_RUSSIA_TAT_TOOLTIP: "§Y[ROOT.GetNameDefCap]§! may not release this country unless first completing the §Y$SOV_referendum_in_tatarstan$§! focus."
  RULE_ALLOW_RELEASE_NATIONS_RUSSIA_KHM_TOOLTIP: "§Y[ROOT.GetNameDefCap]§! may not release this country unless first completing the §Y$SOV_referendum_in_khmao$§! focus."
  RULE_ALLOW_RELEASE_NATIONS_RUSSIA_CRM_TOOLTIP: "§Y[ROOT.GetNameDefCap]§! may not release this country unless first completing the §Y$SOV_referendum_in_crimea$§! focus."
+ RULE_ALLOW_RELEASE_NATIONS_RUSSIA_SUBJECT_RF_TOOLTIP: "§RUNAVAILABLE§!"
  RULE_ALLOW_RELEASE_NATIONS_CHINA_TIB_TOOLTIP: "§Y[ROOT.GetNameDefCap]§! may not release this country unless first completing the §Y$CHI_Tibet_SAR$§! focus."
  RULE_ALLOW_RELEASE_NATIONS_CHINA_ETK_TOOLTIP: "§Y[ROOT.GetNameDefCap]§! may not release this country unless first completing the §Y$CHI_Xinjiang_SAR$§! focus."
  RULE_ALLOW_RELEASE_NATIONS_CHINA_MON_TOOLTIP: "§Y[ROOT.GetNameDefCap]§! may not release this country unless first completing the §Y$CHI_Outer_Mongolia_SAR$§! focus."
