--- a/localisation/english/MD_focus_SUB_l_english.yml
+++ b/localisation/english/MD_focus_SUB_l_english.yml
@@ -169,24 +169,24 @@
  ###########Sovfed Events###########
  subject_rus.5.t: "[BSH.GetNameWithFlag] Nuclear Power Plant"
  subject_rus.5.d: "Bashkir NPP is a Soviet project abandoned in the last century. Now [BSH.GetNameWithFlag] is asking us to revive this project and bring it to an end, will we agree?"
- subject_rus.5.a: "Of course"
+ subject_rus.5.a: "Of Course"
  subject_rus.5.b: "No"
  subject_rus.6.t: "[BSH.GetNameWithFlag] Nuclear Power Plant"
  subject_rus.6.d: "[SOV.GetNameWithFlag] has agreed to revive and complete the Bashkir NPP on our territory"
  subject_rus.6.a: "Gorgeous!"
  subject_rus.7.t: "[BSH.GetNameWithFlag] Nuclear Power Plant"
  subject_rus.7.d: "The [SOV.GetFlag]Russian government believes that the construction of the Bashkir NPP is a project that can be postponed for later, so they refused"
- subject_rus.7.a: "Sadly"
+ subject_rus.7.a: "Sad"
  subject_rus.8.t: "[BSH.GetNameWithFlag] Requests The Creation of Idel-Ural"
  subject_rus.8.d: "The [BSH.GetFlag]Bashkir government has submitted its bill on the unification of Tatarstan and Bashkiria into a single entity - Idel Ural. Are we ready for such a drastic change of borders within the country?"
- subject_rus.8.a: "Of course"
+ subject_rus.8.a: "Of Course"
  subject_rus.8.b: "No"
  subject_rus.9.t: "[BSH.GetNameWithFlag] Requests The Creation of Idel-Ural"
  subject_rus.9.d: "The [SOV.GetFlag]Russian government has agreed to adopt our bill on the unification of our republic with Tatarstan"
  subject_rus.9.a: "Gorgeous!"
  subject_rus.10.t: "[BSH.GetNameWithFlag] Requests The Creation of Idel-Ural"
  subject_rus.10.d: "The [SOV.GetFlag]Russian government rejected our bill on the creation of the Idel Ural Region"
- subject_rus.10.a: "Sadly"
+ subject_rus.10.a: "Sad"
  subject_rus.13.t: "[FROM.GetNameWithFlag] Requests Subsidies"
  subject_rus.13.d: "[FROM.GetNameWithFlag] government requests subsidies from us for their budget, are we ready to allocate them?"
  subject_rus.13.a: "Yes"
@@ -203,14 +203,14 @@
  subject_rus.16.b: "No"
  subject_rus.17.t: "[BSH.GetNameWithFlag] Requests The Creation of Idel-Ural"
  subject_rus.17.d: "[BSH.GetNameWithFlag] government has submitted its bill on the unification of Tatarstan and Bashkiria into a single entity - Idel Ural. Are we ready for such a drastic change of borders within the country?"
- subject_rus.17.a: "Of course"
+ subject_rus.17.a: "Of Course"
  subject_rus.17.b: "No"
  subject_rus.18.t: "[BSH.GetNameWithFlag] Requests The Creation of Idel-Ural"
  subject_rus.18.d: "The [SOV.GetFlag]Russian government has agreed to adopt our bill on the unification of our republic with Tatarstan"
  subject_rus.18.a: "Gorgeous!"
  subject_rus.19.t: "[TAT.GetNameWithFlag] Requests The Creation of Idel-Ural"
  subject_rus.19.d: "The [SOV.GetFlag]Russian government rejected our bill on the creation of the Idel Ural Region"
- subject_rus.19.a: "Sadly"
+ subject_rus.19.a: "Sad"
  subject_rus.22.t: "Tatneft Offers Us Oil Investments"
  subject_rus.22.d: "[TAT.GetFlag]Tatarstan's Tatneft campaign offers investments in the oil sector."
  subject_rus.22.a: "We accept investments"
@@ -242,11 +242,11 @@
  subject_rus.29.a: "Sad"
  subject_rus.32.t: "[CHE.GetNameWithFlag] Requests The Creation of Chechen-Ingush Republic"
  subject_rus.32.d: "[CHE.GetNameWithFlag] government has submitted its bill on the unification of Chechnya and Ingushetia into a single entity - Chechen-Ingush Republic. Are we ready for such a drastic change of borders within the country?"
- subject_rus.32.a: "Of course"
+ subject_rus.32.a: "Of Course"
  subject_rus.32.b: "No"
  subject_rus.33.t: "[CHE.GetNameWithFlag] Requests The Creation of Chechen-Ingush Republic"
  subject_rus.33.d: "The [SOV.GetFlag]Russian government rejected our bill on the creation of the Chechen-Ingush Republic"
- subject_rus.33.a: "Sadly"
+ subject_rus.33.a: "Sad"
  subject_rus.34.t: "[CHE.GetNameWithFlag] Requests The Creation of Chechen-Ingush Republic"
  subject_rus.34.d: "The [SOV.GetFlag]Russian government has agreed to adopt our bill on the unification of our republic with Ingushetia"
  subject_rus.34.a: "Gorgeous!"
@@ -289,14 +289,14 @@
  subject_rus.47.a: "Sad"
  subject_rus.48.t: "[BSH.GetNameWithFlag] Requests The Creation of Volga SSR"
  subject_rus.48.d: "The [BSH.GetFlag]Bashkir government has submitted its bill on the unification of Tatarstan and Bashkiria into a single entity - Volga SSR. Are we ready for such a drastic change of borders within the country?"
- subject_rus.48.a: "Of course"
+ subject_rus.48.a: "Of Course"
  subject_rus.48.b: "No"
  subject_rus.49.t: "[BSH.GetNameWithFlag] Requests The Creation of Volga SSR"
  subject_rus.49.d: "The [SOV.GetFlag]Russian government has agreed to adopt our bill on the unification of our republic with Tatarstan"
  subject_rus.49.a: "Gorgeous!"
  subject_rus.50.t: "[BSH.GetNameWithFlag] Requests The Creation of Volga SSR"
  subject_rus.50.d: "The [SOV.GetFlag]Russian government rejected our bill on the creation of the Volga SSR"
- subject_rus.50.a: "Sadly"
+ subject_rus.50.a: "Sad"
  subject_rus.51.t: "[TAT.GetNameWithFlag] Offers Us Cooperation"
  subject_rus.51.d: "[TAT.GetNameWithFlag] offers us to conclude a trade agreement that involves cooperation with their agro-industrial complex. Will we agree?"
  subject_rus.51.a: "Advantageous Offer"
@@ -627,7 +627,7 @@
  BSH_world_hun: "Partnership with: §Y[HUN.GetNameWithFlag]§!"
  BSH_clear_air: "Request Participation in The §Y"Clean Air" Program§!"
  ###########Sovfed Tatarstan###########
- TAT_unite_idel_ural: "Request For The Creation Of Idel-Ural§!"
+ TAT_unite_idel_ural: "Request For The Creation Of §YIdel-Ural§!"
  TAT_islamic_world_tur: "Russia - The Islamic World: §Y[TUR.GetNameWithFlag]§!"
  TAT_islamic_world_sau: "Russia - The Islamic World: §Y[SAU.GetNameWithFlag]§!"
  TAT_islamic_world_bhr: "Russia - The Islamic World: §Y[BHR.GetNameWithFlag]§!"
