--- a/localisation/english/MD_focus_TUR_l_english.yml
+++ b/localisation/english/MD_focus_TUR_l_english.yml
@@ -1347,7 +1347,7 @@
  TUR_international_community: "The International Community"
  TUR_international_community_desc: "Of course, our main focus is on Turkey, but we also have a duty to make the entire world a better place"
  TUR_condemn_gulf_monarchies: "Condemn the Saudi Monarchy"
- TUR_condemn_gulf_monarchies_desc: "Sadly the Saudi's chose this path of aggresion by designating our group as a terrorist organization. We will have to show them that we cannot tolerate such aggressions"
+ TUR_condemn_gulf_monarchies_desc: "Sadly the Saudis chose this path of aggression by designating our group as a terrorist organization. We will have to show them that we cannot tolerate such aggressions."
  TUR_support_kosovo: "Support Kosovo"
  TUR_support_kosovo_desc: "Kosovo has been under Serbian occupation for some time now, and as fellow muslims, we cannot let them do such harm to them for any longer"
  TUR_fatih_university: "Fatih University"
