--- a/localisation/english/MD_focus_BOS_l_english.yml
+++ b/localisation/english/MD_focus_BOS_l_english.yml
@@ -69,7 +69,7 @@
  BOS_bosnians_will_lead_the_military: "A National Recovery"
  BOS_combine_the_armys: "A End to the Financial Crisis"
  BOS_anti_serbian_propaganda: "Nationalise Foreign Industry "
- BOS_improve_road_quality_in_sarajevo: "Inprove Road Quality in Sarajevo"
+ BOS_improve_road_quality_in_sarajevo: "Improve Road Quality in Sarajevo"
  BOS_improvement_of_the_health_care_system: "Improvements to the Health Care System"
  BOS_secure_regional_support_for_government: "Secure Regional Support for the Government"
  BOS_Alija_Izetbegovic_legacy: "Alija Izetbegović Legacy"
