--- a/localisation/english/MD_focus_SER_VOJ_MNT_l_english.yml
+++ b/localisation/english/MD_focus_SER_VOJ_MNT_l_english.yml
@@ -1612,7 +1612,7 @@
  Montenegro.7.t: "Montenegro Requests a Non-Aggression Pact"
  Montenegro.7.d: "The Montenegrin foreign minister arrived at our capital to discuss the terms for a non-aggression pact, supporting their neutrality."
  Montenegro.7.a: "Montenegro will be protected!"
- Montenegro.7.b: "No thanks."
+ Montenegro.7.b: "No, thanks"
  Montenegro.8.t: "Union Project?"
  Montenegro.8.d: "An official request from Montenegro has arrived in Belgrade to recreate the Serbia-Montenegro Union which was dissolved a some time ago. Will we accept this historical request?"
  Montenegro.8.a: "Welcome back!"
