--- a/localisation/english/MD_focus_BOT_l_english.yml
+++ b/localisation/english/MD_focus_BOT_l_english.yml
@@ -420,7 +420,7 @@
  BOT_ISBO_joins_UDC: "£BOT_Neutral_Communism ISBO - International Socialist Organization (Botswana) joins the new alliance!"
  BOT_BWF_joins_UDC: "£generic_Nat_Populism_small BWF - Botswana Workers Front joins the new alliance!"
  BOT_threat_level_of_poachers_low: "§GLow Threat§!"
- BOT_threat_level_of_poachers_medium: "Medium Threat"
+ BOT_threat_level_of_poachers_medium: "§YMedium Threat§!"
  BOT_threat_level_of_poachers_high: "§RHigh Threat§!"
  BOT_anti_poaching_raid_succesful: "§GWe successfully eliminate §Y[?poachers_killed]§! poachers!§!"
  BOT_anti_poaching_raid_normal: "§GWe manage to eliminate §Y[?poachers_killed]§! poachers!§!"
