Migration of MLW Kode

--- a/localisation/english/MD_focus_MLW_l_english.yml
+++ b/localisation/english/MD_focus_MLW_l_english.yml
@@ -27,9 +27,17 @@
  MLW_special_GUI_problem_icon_TT_delayed: "This icon will only show when there is an issue with something within the §YMalawian All-in-One GUI§!, this icon will show up to the §Yleft§! of the mechanic being affected."
 
 
+ MLW_AIO_view_AFORD_button_TEXT: "£MLW_neutral_Social  §1AFORD§!"
+ MLW_AIO_view_AFORD_button_TT: ""
+ MLW_AIO_view_AFORD_button_TT_delayed: ""
+ MLW_AIO_AFORD_problem_icon_TT: "§RSomething Is Wrong!§!"
+ MLW_AIO_AFORD_problem_icon_TT_delayed: ""
 
-
-
+ MLW_AIO_view_MCP_button_TEXT: "£MLW_Nat_Populist  §1MCP§!"
+ MLW_AIO_view_MCP_button_TT: ""
+ MLW_AIO_view_MCP_button_TT_delayed: ""
+ MLW_AIO_MCP_problem_icon_TT: "§RSomething Is Wrong!§!"
+ MLW_AIO_MCP_problem_icon_TT_delayed: ""
 
  MLW_AIO_view_MZUZU_button_TEXT: "Mzuzu Motors"
  MLW_AIO_view_MZUZU_button_TT: "£click_left  to open the §YMzuzu Motors Submenu§!"
@@ -59,6 +67,68 @@
  MLW_SADC_EXPENSE_display_TT: "$$[?MLW_SADC_trade_expenses|-3] from §YSADC Trade Deals§!\n"
 
 
+ # POLITICAL GUIS
+ # FACTIONALISM GENERAL
+ MLW_factionalism_faction_title_text: "§2Faction Name§!"
+ MLW_factionalism_strength_title_text: "§2Faction Strength§!"
+ MLW_factionalism_threat_title_text: "§2Faction Threat§!"
+ # AFORD GUI
+ # FACTIONALISM
+ MLW_AFORD_moderate_faction: "Moderates"
+ MLW_AFORD_moderate_faction_GUI: "§3Moderates§!"
+ MLW_AFORD_radical_faction: "Radicals"
+ MLW_AFORD_radical_faction_GUI: "§RRadicals§!"
+ MLW_AFORD_factionalism_title_text: "§YFactionalism§! within §1[MLW.neutral_Social_L]§!"
+ MLW_AFORD_where_factionalism: "Managing §YFactionalism§! is not possible without §1[MLW.neutral_Social_L]§! in government!"
+ MLW_AFORD_factionalism_explanation_TT: "§1[MLW.neutral_Social_L]§! is mired with internal factionalism on which direction the party should go."
+ MLW_AFORD_factionalism_explanation_TT_delayed: "On one hand the §CModerates§! would like to maintain a more pragmatic Social Democrat approach to the political situation in [MLW.GetName], and on the other, the §RRadicals§! would like to see a far more aggressive stance towards the political climate."
+ # NATIONAL STRATEGY
+ MLW_AFORD_isolationists: "§8Isolationists§!"
+ MLW_AFORD_nationalists: "§6Nationalists§!"
+ MLW_AFORD_nat_strat_group_title_text: "§2Strategist Group§!"
+ MLW_AFORD_nat_strat_influence_title_text: "§2Current Influence§!"
+ MLW_AFORD_reclusiveness_title_text: "§1[MLW.neutral_Social_L]§!'s §YNational Strategy§!"
+ MLW_AFORD_where_reclusiveness: "Deciding §1[MLW.neutral_Social_L]§!'s §YNational Strategy§! is not possible without §1[MLW.neutral_Social_L]§! in government!"
+ MLW_AFORD_reclusiveness_explanation_TT: "Having held §YNorth Malawi§! as a stronghold for years, it is important for §1[MLW.neutral_Social_L]§! to decide on a §YNational Strategy§!."
+ MLW_AFORD_reclusiveness_explanation_TT_delayed: "Many in the party wish to see §1[MLW.neutral_Social_L]§! able to compete and be a serious contender on the §YNational Stage§!. Others however, are quite content with remaining §YIsolated§!, making connections that run almost parallel to localised nepotistic oligarchism."
+
+ # LESOMA GUI
+ # FACTIONALISM
+ MLW_AFORD_internal_fighting_faction_title_LESOMA: "LESOMA"
+ MLW_LESOMA_moderate_faction: "Democratic Socialists"
+ MLW_LESOMA_moderate_faction_GUI: "§6Democratic Socialists§!"
+ MLW_LESOMA_hardliner_faction: "Marxist-Leninists"
+ MLW_LESOMA_hardliner_faction_GUI: "§RMarxist-Leninists§!"
+ MLW_LESOMA_anarchist_faction: "Sankarists"
+ MLW_LESOMA_anarchist_faction_GUI: "§7Sankarists§!"
+
+ # MCP GUI
+ # LEADERSHIP
+ MCP_leader_title_text: "§YLeader of the MCP:§!"
+ MCP_gwanda_chakuamba: "Gwanda Chakuamba"
+ MCP_john_tembo: "John Tembo"
+ MCP_lazarus_chakwera: "Lazarus Chakwera"
+ MCP_jumani_johansson: "Jumani Johansson"
+ # FACTIONALISM
+ MCP_faction_moderates_GUI: "§3Moderates§!"
+ MCP_faction_hardliners_GUI: "§RHardliners§!"
+ MCP_faction_moderates_victory_text: "§YThe§! §3Moderates§! §Yhave won out over the§! §RHardliners§!§Y!§!"
+ MCP_faction_hardliners_victory_text: "§YThe§! §RHardliners§! §Yhave won out over the§! §3Moderates§!§Y!§!"
+ # LIBERALISM/CONSERVATISM
+ MCP_LC_society_group_name_title_text: "§2Societal Group§!"
+ MCP_LC_society_group_strength_title_text: "§2Strength of Group§!"
+ MCP_LC_society_conservative_name_title_text: "§3Conservatives§!"
+ MCP_LC_society_liberals_name_title_text: "§CLiberals§!"
+ MCP_LC_split_how_to_unlock: "§YTo unlock the ability to influence societal§! §3Conservatism§!§Y, you must complete the associated focus and have§! §1[MLW.Nat_Populism_L]§! §Yas ruling party or junior partner§!"
+ # REFERENDUM REPEAL
+ MCP_RR_group_backing_title_text: "§2Backing Group§!"
+ MCP_RR_group_backing_support_title_text: "§2Support for Repeal§!"
+ MCP_RR_backing_group_suspicion_title_text: "§2Suspicion of Motives§!"
+ MCP_RR_judges_name_title_text: "§3Judges§!"
+ MCP_RR_population_name_title_text: "§CPopulation§!"
+ MCP_RR_how_to_unlock: "§YTo unlock the ability to repeal the§! §WReferendum of 1993§!§Y, you must complete the associated focus and have§! §1[MLW.Nat_Populism_L]§! §Yas ruling party or junior partner§!"
+ MCP_RR_repealed_text: "§WReferendum of 1993§! §Ghas been repealed!§!\n§YThis will allow the§! §1[MLW.Nat_Populism_L]§! §Yto potentially push for restrictions to democracy, resulting in a one party state!§!"
+ MCP_RR_upheld_text: "§WReferendum of 1993§! §Rhas been upheld!§!\n§YThis has stopped the§! §1[MLW.Nat_Populism_L]§! §Ybeing able to push for their more radical reforms, although they may still try to sneak through legislation that attacks democratic insitutions, the§! §3Judges§! §Yare watching them diligently!§!"
 
 
 
@@ -108,12 +178,6 @@
 
 
 
-
-
-
-
-
- # WIP STUFF
  # MZUZU MOTORS GUI
  # GUI
  MLW_MZUZU_market_share_BAR_TT: "Current Market Share in [THIS.GetName]: [?THIS.MLW_MZ_market_share_display|Y3]%"
@@ -226,6 +290,9 @@
  # SADC TRADING GUI
  # GUI
  MLW_AIO_SADC_trade_menu_TITLE_TEXT: "§WSADC Trade Deals§!"
+
+ MLW_AIO_SADC_trade_menu_TRADE_AGREEMENTS_TITLE_TEXT: "Current Trade Agreements:"
+ MLW_AIO_SADC_trade_menu_TRADE_AGREEMENTS_AMOUNT_TEXT: "[?ROOT.signed_trade_agreements|Y0]"
 
  MLW_AIO_SADC_trade_menu_CONSUMER_TITLE_TEXT: "Consumer Goods Stockpile:"
  MLW_AIO_SADC_trade_menu_CONSUMER_AMOUNT_TEXT: "[?ROOT.SADC_consumer_goods_total|0] Units"
