--- a/localisation/english/MD_focus_GER_l_english.yml
+++ b/localisation/english/MD_focus_GER_l_english.yml
@@ -1229,7 +1229,7 @@
  GER_upgrade_military_infrastructure: "Enhance Military Infrastructure"
  GER_upgrade_military_infrastructure_desc: "Our military infrastructure could use some enhancements. Even though it isn't falling apart, it wouldn't hurt to modernize it."
  GER_modernize_equipment: "Modernize Equipment"
- GER_modernize_equipment_desc: "Despite having a fairly modernized pool of weapons, a lot of our equipment stays outdated ever sinc reunification."
+ GER_modernize_equipment_desc: "Despite having a fairly modernized pool of weapons, a lot of our equipment stays outdated ever since reunification."
  GER_maximize_training_efficiency: "Maximize Training Efficiency"
  GER_maximize_training_efficiency_desc: "Due to the extensive training period our recruits must go through, we need to capatilize on the experiences they gain during the training."
  GER_recruitment_campaigns: "Recruitment Campaigns"
