--- a/localisation/english/MD_focus_GER_l_english.yml
+++ b/localisation/english/MD_focus_GER_l_english.yml
@@ -1231,7 +1231,7 @@
  GER_modernize_equipment: "Modernize Equipment"
  GER_modernize_equipment_desc: "Despite having a fairly modernized pool of weapons, a lot of our equipment stays outdated ever since reunification."
  GER_maximize_training_efficiency: "Maximize Training Efficiency"
- GER_maximize_training_efficiency_desc: "Due to the extensive training period our recruits must go through, we need to capatilize on the experiences they gain during the training."
+ GER_maximize_training_efficiency_desc: "Due to the extensive training period our recruits must go through, we need to capitalize on the experiences they gain during the training."
  GER_recruitment_campaigns: "Recruitment Campaigns"
  GER_recruitment_campaigns_desc: "The Bundeswehr has had a lack of new recruits in recent years, and putting up new recruitment campaigns would be a safe way to reel in more manpower."
  GER_civil_war_mission: "The End of the Republic"
@@ -1720,45 +1720,45 @@
  Germany.420.d: "After more than 90 years of paying back war reparations to the countries we scarred during the 1st and 2nd World War's, today we make our final payment to clear our debt and put our past behind us. It has been a long road but we are finally at the end and we can call it even.\nNow it's time for our economy and our banks to recover from the years of economic hardship we have had to endure during this time."
 
  germany.520.t: "General Gudera retires"
- germany.520.d: "after the dicision to cut out military spendings our honored General ask for his retirement."
- germany.520.a: "Try to convince him to stay"
+ germany.520.d: "after the decision to cut out military spendings our honored General ask for his retirement."
+ germany.520.a: "Try to convince him to stay."
  germany.520.b: "Good bye"
  germany.525.t: "The Commander of the Heeresführungskommando resigns"
- germany.525.d: "After a distinguished Career in service to the German nation, the Leader of the Heeresführungskommando (Army Forces Command) Retires. we need to Promote a Successor, that can lead our proud army to new glory"
- germany.525.a: "We should Honor him with a military parade"
- germany.525.b: "We don´t care for these militaristic nonsense"
+ germany.525.d: "After a distinguished Career in service to the German nation, the Leader of the Heeresführungskommando (Army Forces Command) Retires. we need to Promote a Successor, that can lead our proud army to new glory."
+ germany.525.a: "We should Honor him with a military parade."
+ germany.525.b: "We don´t care for these militaristic nonsense."
  germany.523.t: "Nothing interesting is found"
- germany.523.d: "after a Breve Investrigation we found nothing that justify to continue."
+ germany.523.d: "after a Breve Investigation we found nothing that justify to continue."
  germany.523.a: "Good news"
- germany.523.b: "Then rebrand somthing to Nazi contend"
+ germany.523.b: "Then rebrand something to Nazi contend"
  germany.526.t: "The Nazi contend"
- germany.526.d: "Maybe it´s not our Proudest action, but to fight Nazis and Militaristim it have to be legal"
+ germany.526.d: "Maybe it´s not our Proudest action, but to fight Nazis and Militarism it have to be legal."
  germany.526.a: "Maybe we are going to far"
  germany.526.b: "No step back, do it."
  germany.524.t: "We find some suspicious Stuff"
- germany.524.d: "after a breve investigation we found some interessting stuff, that could worth to continue our investigation"
- germany.524.a: "Their have to be a network"
- germany.524.b: "Punichment for the responsible is enough"
+ germany.524.d: "after a breve investigation we found some interesting stuff, that could worth to continue our investigation."
+ germany.524.a: "There have to be a network."
+ germany.524.b: "Punishment for the responsible is enough."
  germany.524.c: "Let´s cover it "
  germany.527.t: "Get rid of these NAZIS"
- germany.527.d: "we have found some stuff, and it is like with rats, you see one and 10 are hiding, so their have to be a network of these fascists"
+ germany.527.d: "we have found some stuff, and it is like with rats, you see one and 10 are hiding, so their have to be a network of these fascists."
  germany.527.a: "The Fish smell from the Head"
  germany.527.b: "We need a complete denazification"
  germany.522.t: "Send General to Retirement"
- germany.522.d: "the results of our investigation show, that a General is involed into these actions and we need him to retire"
+ germany.522.d: "The results of our investigation show, that a General is involved into these actions and we need him to retire."
  germany.522.a: "Let him leave with honor"
  germany.522.b: "Send him to retirement and let the civil justice care about him "
  germany.511.t: "Government Consultation with [FROM.GetName] "
- germany.511.d: "the high-level Officials of our Countrys meet to discuss and coordinate"
+ germany.511.d: "the high-level Officials of our Countries meet to discuss and coordinate."
  germany.511.a: "Economic Cooperation"
  germany.511.b: "Officer Exchange"
  germany.511.c: "Scientific Exchange"
- germany.512.t: "Give Developement Aid to [FROM.GetName]"
- germany.512.d: "we need to support the less developed coutrys."
+ germany.512.t: "Give Development Aid to [FROM.GetName]"
+ germany.512.d: "We need to support the less developed countries."
  germany.512.a: "Give Economic aid"
  germany.512.b: "Give Industrial aid"
- germany.512.c: "Develope their infrastructure"
- germany.513.t: "Sell MEKO Fregattes to [FROM.GetName]"
+ germany.512.c: "Develop their infrastructure"
+ germany.513.t: "Sell MEKO Frigates to [FROM.GetName]"
  germany.513.d: "Our Shipyards need to produce Ships to pay their workers, so we need to export some"
  germany.513.a: "Sell Anzac Class"
  germany.513.b: "Sell Victory Class"
@@ -1994,7 +1994,7 @@
  GER_idea_Bergbaufolgelandschaften: "Bergbaufolgelandschaften"
  GER_idea_restructure_Infrastructure: "Restructure Infrastructure"
  GER_idea_Army_Training_Command: "Army Training Command"
- GER_idea_Army_Training_Command_desc: "this idea will be removed when Germany form the USE or the Democratic path is abondened."
+ GER_idea_Army_Training_Command_desc: "this idea will be removed when Germany form the USE or the Democratic path is abandoned."
  GER_idea_Cyber_and_Information_Domain_Service: "Cyber and Information Domain Service"
  GER_idea_Streitkrafte_Basis: "Streitkräfte Basis"
  GER_idea_Streitkraftegeinsame_Taktische_Feuerunterstutzung: "Heerestruppenkommando"
@@ -2116,15 +2116,15 @@
  GER_Idea_medium_Force: "Medium Forces Focus"
  GER_Idea_heavy_Force: "Heavy Forces Focus"
  GER_idea_Marinekommando: "Marinekommando Rostock"
- GER_idea_Marinekommando_desc: "§Ythis idea will be removed when Germany form the USE or the Democratic path is abondened.§!"
- GER_Idea_Neuausrichtung_Marine: "Realigment of the German Navy"
+ GER_idea_Marinekommando_desc: "§Ythis idea will be removed when Germany form the USE or the Democratic path is abandoned.§!"
+ GER_Idea_Neuausrichtung_Marine: "Realignment of the German Navy"
  GER_Idea_Weltraumkommando: "Weltraumkommando der Bundeswehr"
  GER_idea_officer_exchange: "Officer Exchange"
  GER_idea_scientific_exchange_medium: "Scientific Exchange"
  Ger_Idea_Miltary_Training: "German Military Training"
  GER_Ideas_Reformed_German_International_Institutes: "Reformed German International Institutes"
  GER_Idea_Heeresflieger_VI: "Heeresflieger Struktur IV"
- GER_Idea_Heeresflieger_VI_desc: "§Ywill be removed when the limit of the final settlement will be exceeded, Germany form the USE or the Democratic path is abondened.§!"
+ GER_Idea_Heeresflieger_VI_desc: "§Ywill be removed when the limit of the final settlement will be exceeded, Germany form the USE or the Democratic path is abandoned.§!"
  GER_russian_buddies: "German-Russian Friendship"
  Ger_idea_European_Army: "German Anker Army"
  Ger_idea_European_Army_desc: "Germany form the Anker for a European Army, by form integrative structures his smaller Allies."
@@ -2160,9 +2160,9 @@
 
 ### Country Flags
  GER_hofer_free: "Helmut Hofer Got Released From Jail"
- GER_generals_reactivated_cf: "We reactivated our generals"
+ GER_generals_reactivated_cf: "We reactivate our generals"
  GER_v_fall_declared_cf: "The V-Fall got declared"
- GER_reserve_called_cf: "The reserve got called in"
+ GER_reserve_called_cf: "The reserve get called in"
  GER_move_parliament_bonn_cf: "We moved our parliament to Bonn"
 
 ### Tooltips ###
