--- a/localisation/english/MD_focus_GER_l_english.yml
+++ b/localisation/english/MD_focus_GER_l_english.yml
@@ -1741,7 +1741,7 @@
  germany.524.b: "Punishment for the responsible is enough."
  germany.524.c: "Let´s cover it "
  germany.527.t: "Get rid of these NAZIS"
- germany.527.d: "we have found some stuff, and it is like with rats, you see one and 10 are hiding, so their have to be a network of these fascists."
+ germany.527.d: "we have found some stuff, and it is like with rats, you see one and 10 are hiding, so they have to be a network of these fascists."
  germany.527.a: "The Fish smell from the Head"
  germany.527.b: "We need a complete denazification"
  germany.522.t: "Send General to Retirement"
