--- a/localisation/english/MD_focus_GER_l_english.yml
+++ b/localisation/english/MD_focus_GER_l_english.yml
@@ -862,7 +862,7 @@
  GER_bmvi: "BMVI"
  GER_bmvi_desc: "Creating a Federal Ministry of Transport and Digital Infrastructure is part of the Merkel government's plan to drive forward digitalization efforts. This 'BMVI' will replace the BMVBS."
  GER_digitalrat: "Digitalrat"
- GER_digitalrat_desc: "Called upon by the Merkel IV cabinet, a digital council was established in 2018. Consisting of forward-thinking giants and innovative start up CEOs of multimedia and innovation, the chancellor's new digital advisor elite will provide her with more effective and profitable plans for Germany's digitalization efforts."
+ GER_digitalrat_desc: "Called upon by the fourth cabinet of Merkel, a digital council was established in 2018. Consisting of forward-thinking giants and innovative start up CEOs of multimedia and innovation, the chancellor's new digital advisor elite will provide her with more effective and profitable plans for Germany's digitalization efforts."
  GER_relax_conscription: "Relax Conscription"
  GER_relax_conscription_desc: "We are no longer in a heightened state of readiness since the reunification of Germany. We can relax our conscription laws now as we no longer have such high need for manpower."
  GER_nuclear_confusion: "The Nuclear Question"
