--- a/localisation/english/MD_focus_GER_l_english.yml
+++ b/localisation/english/MD_focus_GER_l_english.yml
@@ -19,7 +19,7 @@
  GER_Restructure_Infrastructure: "Infrastructure Reforms"
  GER_Restructure_Infrastructure_desc: "The divide in German infrastructure from the rest of the world is still quite apparent, we must improve it greatly if we are to compete in the best European countries list."
  GER_Deutsche_Post: "Reform Deutsche Bundespost"
- GER_Deutsche_Post_desc: "The German Bundespost was split in three seperate branches, but we need to continue the Reforms to form a modern Comunication System in the BRD and ensure people get their bills and tax letters!"
+ GER_Deutsche_Post_desc: "The German Bundespost was split in three separate branches, but we need to continue the Reforms to form a modern Communication System in the BRD and ensure people get their bills and tax letters!"
  GER_Deutsche_Post_AG: "Deutsche Post AG"
  GER_Deutsche_Post_AG_desc: "Deutsche Post AG is a German postal service and courier company. It provides mail and parcel delivery services in Germany and worldwide."
  GER_DHL: "DHL"
