--- a/localisation/english/MD_focus_HEZ_l_english.yml
+++ b/localisation/english/MD_focus_HEZ_l_english.yml
@@ -639,7 +639,7 @@
  HEZ_open_mexico_decisions: "Open [MEX.GetFlag][MEX.GetName]"
  HEZ_close_mexico_decisions: "Close [MEX.GetFlag][MEX.GetName]"
 
- HEZ_border_skirmish_lebanon: "Border Skirmish Lebonan"
+ HEZ_border_skirmish_lebanon: "Border Skirmish Lebanon"
  HEZ_small_raid: "Small Raid"
  HEZ_small_raid_effect_tt: "Start a §YBorder War§! with [LEB.GetFlag][LEB.GetName].\n\nIf §GWon§!:\n£army_experience Army Experience §G+5§!\n£GFX_decision_cargo_crate §G+100§! Random equipment between §YSmall Arms§!, §YC&C Equipment§!, §YMANPADS§!, and §YATGM§!\n\nIf §RLost§!:\n£army_experience Army Experience §G+10§!\n"
  cp_cost_10: "£command_power 10"
