--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -2860,8 +2860,8 @@
 
  CHI_fascism: "China"
  CHI_fascism_DEF: "China"
- CHI_democratic: "Chinese Republic"
- CHI_democratic_DEF: "the Chinese Republic"
+ CHI_democratic: "China"
+ CHI_democratic_DEF: "China"
  CHI_neutrality: "China"
  CHI_neutrality_DEF: "China"
  CHI_communism: "China"
@@ -2873,9 +2873,6 @@
  CHI_nationalist: "China"
  CHI_nationalist_DEF: "China"
  CHI_nationalist_ADJ: "Chinese"
- CHI_AUTH_S: "People's Republic of China"
- CHI_AUTH_S_DEF: "the People's Republic of China"
- CHI_AUTH_S_ADJ: "Chinese"
 
  CHL_fascism: "Chile"
  CHL_fascism_DEF: "Chile"
