--- a/localisation/english/MD_focus_CHI_l_english.yml
+++ b/localisation/english/MD_focus_CHI_l_english.yml
@@ -1782,12 +1782,12 @@
  grab_982: "Capture Sikkim"
  
  #Flag
- TAI_sar_exec: "Taiwan SAR Establish"
- MON_sar_exec: "Outer Mongolian SAR Establish"
- TIB_sar_exec: "Tibetan SAR Establish"
- ETK_sar_exec: "Xinjiang SAR Establish"
- jebtsundamba_sat: "9th Jebtsundamba Khutuktu finished sitting-in-the-bed"
- CHI_taiwan_strait_war: "The Taiwan Strait War Erupted"
+ TAI_sar_exec: "§BTaiwan SAR Establish§!"
+ MON_sar_exec: "§BOuter Mongolian SAR Establish§!"
+ TIB_sar_exec: "§BTibetan SAR Establish§!"
+ ETK_sar_exec: "§BXinjiang SAR Establish§!"
+ jebtsundamba_sat: "§B9th Jebtsundamba Khutuktu finished sitting-in-the-bed§!"
+ CHI_taiwan_strait_war: "§BThe Taiwan Strait War Erupted§!"
  
  #Tech Bonus
  CHI_Xiaomi_Vehicle: "Xiaomi Vehicle"
