quick fixes of UKR

--- a/localisation/english/MD_focus_UKR_l_english.yml
+++ b/localisation/english/MD_focus_UKR_l_english.yml
@@ -208,8 +208,8 @@
  ukraine_maidan_east.26.a: "Federalization Should Be"
  ukraine_maidan_east.26.b: "Never"
  ukraine_maidan_east.27.t: "Refusal of Federalization"
- ukraine_maidan_east.27.d: "We did not accept their offer of Federalization, the negotiating team immediately left our meeting place, it seems there will be a conflict"
- ukraine_maidan_east.27.a: "Waiting for the worst"
+ ukraine_maidan_east.27.d: "We agreed to Federalization, and for sure, thanks to this, we were able to avoid terrible consequences for our country"
+ ukraine_maidan_east.27.a: "Good"
  ##IDEAS
  UKR_maidan_temporary_attack_idea: "Organized Offensive"
  ##########MAIN MAIDAN##########
@@ -1199,6 +1199,7 @@
  UKR_zelenskiy_socialist_TT: "§YZelenskyy§! will change his §BOutlook§!!"
  UKR_zelenskiy_formed_TT: "£ukr_servant_of_the_people §YThe Servant of the People§! Party will be Created!"
  UKR_zelenskiy_here_TT: "£ukr_servant_of_the_people §YThe Servant of the People§! Party Must be Created!"
+ UKR_zelenskiy_pizdec_TT: "§RPerforming this trick will cause a repeat of the events of the series: Servant of the People. Ukraine will be fragmented!!!!§!"
  ##########Events##########
  ukr_zelenskiy.1.t: "Surprising Announcement"
  ukr_zelenskiy.1.d: "Today, Volodymyr Zelenskyy made a surprising announcement. In this Statement he said that he renounced the ideas of libertarianism and "by the request of the majority" adopted the ideas of socialism. Also, the president announced that Ukraine will strengthen ties with the West and will try to attract Western investors."
